# cv_markdownToPdf

./: .gitignore  README.md  cv_en.md  cv_fr.md  cv_fr_en_aiGenerated.md  index.html  pyproject.toml  translate_markdown.py
.github/workflows/: jekyll-gh-pages.yml  translate-cv.yml
scripts/: progress_tracker.py  translate_markdown.py  translator.py
